# ai-driven-invention-9655-codex

./: .resource_finder_complete  CODE_WALKTHROUGH.md  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: README.md
logs/: execution_codex_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_codex_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.tex  references.bib
paper_draft/commands/: macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
paper_draft/tables/: active_summary.tex  data_audit.tex  gnome_transfer.tex  predictive_metrics.tex  stat_tests.tex
papers/: README.md
papers/pages/: 2308.14920_matbench_discovery_crystal_stability_benchmark_manifest.txt  2312.03687_mattergen_generative_inorganic_materials_design_manifest.txt  2401.00096_mace_mp_atomistic_materials_chemistry_foundation_model_manifest.txt  2406.13163_llmatdesign_autonomous_materials_discovery_llms_manifest.txt  2410.12771_omat24_open_materials_dataset_models_manifest.txt  2506.23971_uma_universal_models_for_atoms_manifest.txt  (+2 more)
results/: active_learning_summary.csv  active_learning_trace.csv  data_audit.json  environment.json  gnome_transfer_summary.csv  predictive_metrics.csv  reproducibility_check.json  stat_tests.csv
src/: run_discovery_experiments.py
