[project]
name = "research-workspace"
version = "0.1.0"
description = "Research workspace for experiments"
requires-python = ">=3.10"
dependencies = [
    "arxiv>=4.0.0",
    "datasets>=5.0.0",
    "h5py>=3.16.0",
    "matplotlib>=3.10.9",
    "pandas>=2.3.3",
    "pypdf>=6.13.0",
    "requests>=2.33.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "torch>=2.12.0",
    "tqdm>=4.68.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
